@@ -2,7 +2,6 @@ from zope import component
 from zope import interface
 from zope.app.annotation import interfaces as annointerfaces
 from p4a.calendar import interfaces
-from p4a.fileimage import DictProperty
 
 from Products.ATContentTypes.content import folder
 
