@@ -103,8 +103,12 @@ class LocationFilterTest(AudioTestCase):
 def test_suite():
     from unittest import TestSuite, makeSuite
     from Testing.ZopeTestCase.zopedoctest import ZopeDocFileSuite
+    from zope.testing import doctest
+    from zope.component import testing
     
     suite = TestSuite()
+    suite.addTest(doctest.DocTestSuite('p4a.plonecalendar.sitesetup',
+                                       optionflags=doctest.ELLIPSIS))
     suite.addTest(ZopeDocFileSuite(
         'calendar.txt',
         package='p4a.plonecalendar',
